# snake_AI

./: .gitignore  DQN_hyper_tuning.py  LICENSE.md  README.md  TODO.md  custom_callback.py  main.py  pyproject.toml  snake_game.py  snake_game_environment.py  ui.py
Training/SAVED_MODELS/DQN/FLAT/GRID_30_20/FOV_RADIUS_3/: continue_markers.json  evaluation.json
Training/SAVED_MODELS/DQN/FLAT/GRID_30_20/FOV_RADIUS_5/: best_score.json  continue_markers.json  evaluation.json
Training/SAVED_MODELS/DQN/GRID/GRID_30_20/FOV_RADIUS_5/: evaluation.json
Training/SAVED_MODELS/PPO/FLAT/GRID_30_20/FOV_RADIUS_5/: evaluation.json
Training/SAVED_MODELS/PPO/GRID/GRID_30_20/FOV_RADIUS_1/: evaluation.json
Training/SAVED_MODELS/PPO/GRID/GRID_30_20/FOV_RADIUS_5/: best_score.json  evaluation.json
Training/SAVED_MODELS/PPO/GRID/GRID_30_20/FOV_RADIUS_6/: best_score.json  evaluation.json
Training/SAVED_MODELS/PPO/GRID/GRID_45_30/FOV_RADIUS_5/: evaluation.json
Training/Saved Models/PPO/GRID/GRID_30_20/FOV_RADIUS_5/: evaluation.json
game/: environment.py  game_over.py  snake_game.py
rl/: check_models.py  feature_extractors.py  paths.py  playback.py  training.py
src/: main.py
src/game/: environment.py  game_over.py
src/rl/: callbacks.py  hyperparameter_tuning.py  paths.py  playback.py  training.py
src/ui/: app.py  game_view.py  models.py  plot_window.py  theme.py  widgets.py
src/ui/screens/: base.py  home.py  models.py  play.py  test_model.py  train_model.py
ui/: app.py  theme.py  widgets.py
ui/screens/: base.py  home.py  play.py  test_model.py  train_model.py
