[project]
name = "snake_AI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.1.0",
    "numpy>=1.20.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "optuna>=4.9.0",
    "customtkinter>=6.0.0",
    "tensorboard>=2.15.0",
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/game", "src/rl", "src/ui"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
# Prefer system Python over uv's own downloaded/cached standalone builds:
# uv's managed CPython builds ship a Tk with no FreeType/Xft linkage, which
# breaks CustomTkinter rendering (rounded corners, font antialiasing) on some linux distros.
python-preference = "system"
